# M3Mgine

./: .dockerignore  .env.example  .gitignore  CLA.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  pyproject.toml  render.yaml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
engine/: API.md  DEPLOYMENT.md  README.md  __init__.py  accounts.py  api.py  auth.py  bench.py  billing.py  cli.py  client.py  compiler.py  context.py  crypto.py  dashboard.py  demo_enforce.py  demo_grounded.py  detector.py  embeddings.py  eval_correction.py  eval_enforce.py  eval_extract.py  evaluator.py  grounded.py  handoff.py  kg.py  llm.py  mailer.py  mcp_server.py  memory.py  metrics.py  obsidian.py  outbound.py  payments.py  pii.py  policy_engine.py  policy_rules.yaml  portability.py  redact.py  requirements-mcp.txt  (+8 more)
engine/benchmarks/: REPORT.md  results.json
engine/integrations/: runtime_gate.py
engine/scripts/: activate_rls.py  iyzico_setup.py
engine/tests/: e2e_smoke.py  run_ci.py  run_conformance.py  test_accounts.py  test_admin.py  test_async.py  test_billing.py  test_checkout.py  test_compliance.py  test_context.py  test_detector.py  test_embeddings.py  test_engine_quality.py  test_handoff.py  test_hardening.py  test_hybrid_candidate.py  test_invoice.py  test_kg.py  test_live_llm.py  test_loop.py  test_memory.py  test_metrics.py  (+13 more)
examples/: correction_acme_example.md  trap_from_correction_acme.md  trap_heldout_acme_storepage.md
(+8 files in other folders)
